--- a/assets/scss/editor.scss
+++ b/assets/scss/editor.scss
@@ -1,11 +1,1 @@
-@import "partials/base";
-@import "partials/blocks-base";
-@import "partials/blocks-core";
-@import "partials/blocks-plugin";
-// @import "partials/blocks-custom";
-// @import "partials/post-summary";
-@import "partials/gutenberg";
-
-* {
-	border: 1px dotted red;
-}
+@import "gutenberg/style-editor";
