--- a/assets/scss/gutenberg/_style-editor.scss
+++ b/assets/scss/gutenberg/_style-editor.scss
@@ -1,17 +1,17 @@
 body {
-	color: #333;
-	font-family: "Source Sans Pro", sans-serif;
-	font-size: 18px;
-	font-weight: 400;
-	line-height: 1.625;
+	color: $body--font-color;
+	font-family: $body--font-family;
+	font-size: $body--font-size;
+	font-weight: $font-weight--regular;
+	line-height: $line-height--regular;
 }
 
 p,
 ul,
 ol,
 dl {
-	font-size: 18px;
-	line-height: 1.625;
+	font-size: $body--font-size;
+	line-height: $line-height--regular;
 }
 
 /* Regular content width.
@@ -58,12 +58,12 @@ dl {
 ---------------------------------------------------------------------------- */
 
 a {
-	color: #0073e5;
+	color: $accent;
 }
 
 a:focus,
 a:hover {
-	color: #333;
+	color: $link--font-color-hover;
 	text-decoration: none;
 }
 
@@ -73,37 +73,37 @@ h3,
 h4,
 h5,
 h6 {
-	font-family: "Source Sans Pro", sans-serif;
-	font-weight: 400;
-	line-height: 1.2;
+	font-family: $headings--font-family;
+	font-weight: $font-weight--regular;
+	line-height: $line-height--small;
 	margin: 0 0 20px;
 }
 
 h1 {
-	font-size: 30px;
+	font-size: $h1--font-size;
 }
 
 h2 {
-	font-size: 27px;
+	font-size: $h2--font-size;
 }
 
 h3 {
-	font-size: 24px;
-	font-weight: 600;
+	font-size: $h3--font-size;
+	font-weight: $font-weight--semibold;
 }
 
 h4 {
-	font-size: 20px;
-	font-weight: 600;
+	font-size: $h4--font-size;
+	font-weight: $font-weight--semibold;
 	margin-top: 40px;
 }
 
 h5 {
-	font-size: 18px;
+	font-size: $h5--font-size;
 }
 
 h6 {
-	font-size: 16px;
+	font-size: $h6--font-size;
 }
 
 .wp-block-heading h1.light,
@@ -112,14 +112,14 @@ h6 {
 .wp-block-heading h4.light,
 .wp-block-heading h5.light,
 .wp-block-heading h6.light {
-	color: #f5f5f5;
+	color: $lightest-gray:
 }
 
 .editor-post-title__block .editor-post-title__input {
-	font-family: "Source Sans Pro", sans-serif;
-	font-size: 30px;
-	font-weight: 400;
-	line-height: 1.2;
+	font-family: $body--font-family;
+	font-size: $h1--font-size;
+	font-weight: $font-weight--regular;
+	line-height: $line-height--small;
 	margin: 0 0 20px;
 }
 
@@ -157,7 +157,7 @@ p.has-text-color a:hover {
 }
 
 p.has-background.light-text a {
-	color: #fff;
+	color: $white;
 	text-decoration: underline;
 }
 
@@ -190,26 +190,26 @@ p.has-background.light-text a:hover {
 
 .wp-block-pullquote p,
 .wp-block-quote p {
-	font-family: "Source Sans Pro", serif;
-	font-size: 21px !important;
+	font-family: $body--font-family;
+	font-size: $h3--font-size !important;
 	font-style: italic;
-	line-height: 1.8;
+	line-height: $line-height--large;
 	margin-bottom: 42px;
 }
 
 .wp-block-pullquote p,
 .wp-block-quote.is-style-large p {
-	font-size: 32px !important;
+	font-size: $h2--font-size !important;
 }
 
 .wp-block-pullquote.is-style-solid-color p {
-	color: #fff;
+	color: $white;
 	margin-bottom: 42px;
 	text-align: center;
 }
 
 .wp-block-pullquote.is-style-solid-color {
-	background-color: #333;
+	background-color: $dark-gray;
 }
 
 .wp-block-pullquote.is-style-solid-color.alignleft blockquote,
@@ -225,10 +225,10 @@ p.has-background.light-text a:hover {
 
 .wp-block-pullquote .wp-block-pullquote__citation,
 .wp-block-quote .wp-block-quote__citation {
-	color: #666;
+	color: $med-gray;
 	display: block;
-	font-family: "Source Sans Pro", serif;
-	font-size: 16px;
+	font-family: $body--font-family;
+	font-size: $body-small--font-size;
 	font-style: italic;
 	margin-top: -25px;
 	text-align: inherit;
@@ -240,7 +240,7 @@ p.has-background.light-text a:hover {
 }
 
 .wp-block-pullquote.is-style-solid-color .wp-block-pullquote__citation {
-	color: #fff;
+	color: $white;
 	font-style: italic;
 }
 
@@ -250,9 +250,9 @@ p.has-background.light-text a:hover {
 }
 
 figcaption {
-	color: #333;
-	font-size: 14px;
-	font-weight: 600;
+	color: $body--font-color;
+	font-size: $body-small--font-size;
+	font-weight: $font-weight--semibold;
 	margin: 0;
 	text-align: center;
 }
@@ -266,15 +266,15 @@ figcaption {
 ---------------------------------------------------------------------------- */
 
 .wp-block-cover .wp-block-cover-text {
-	color: #fff;
-	font-size: 48px;
+	color: $white;
+	font-size: $h1--font-size;
 }
 
 /* Lists
 ---------------------------------------------------------------------------- */
 
 .editor-block-list__block li {
-	line-height: 1.625;
+	line-height: $line-height--normal;
 	margin-bottom: 0;
 }
 
@@ -284,8 +284,8 @@ figcaption {
 .wp-block-preformatted pre,
 .wp-block-verse pre {
 	font-family: monospace;
-	font-size: 18px;
-	line-height: 1.625 !important;
+	font-size: $body--font-size;
+	line-height: $line-height--normal !important;
 }
 
 /* Separators
@@ -294,7 +294,7 @@ figcaption {
 hr.wp-block-separator {
 	border: none;
 	border-bottom: 1px solid currentColor;
-	color: #eee;
+	color: $lighter-gray;
 	margin: 1.65em auto;
 }
 
@@ -304,7 +304,7 @@ hr.wp-block-separator {
 
 hr.wp-block-separator.is-style-dots {
 	border-width: 0;
-	color: #333;
+	color: $dark-gray;
 }
 
 /* Tables
@@ -315,7 +315,7 @@ table {
 }
 
 .wp-block-table {
-	line-height: 2;
+	line-height: $line-height--big;
 }
 
 .wp-block-table td,
@@ -326,19 +326,19 @@ table {
 }
 
 .wp-block-table th {
-	font-weight: 600;
+	font-weight: $font-weight--semibold;
 }
 
 .wp-block-table tr {
-	border-top: 1px solid #eee;
+	border-top: 1px solid $lighter-gray;
 }
 
 .wp-block-table tr:last-of-type {
-	border-bottom: 1px solid #eee;
+	border-bottom: 1px solid $lighter-gray;
 }
 
 .wp-block-table tbody {
-	border-bottom: 1px solid #eee;
+	border-bottom: 1px solid $lighter-gray;
 }
 
 .wp-block-table.is-style-stripes {
@@ -349,18 +349,18 @@ table {
 ---------------------------------------------------------------------------- */
 
 .ab-block-cta .ab-button {
-	font-family: "Source Sans Pro", sans-serif;
-	font-weight: 600;
+	font-family: $body--font-family;
+	font-weight: $font-weight--semibold;
 }
 
 .wp-block-button .wp-block-button__link {
 	border: 0;
 	border-radius: 5px;
 	cursor: pointer;
-	font-size: 16px;
-	font-family: "Source Sans Pro", sans-serif;
-	font-weight: 600;
-	line-height: 24px;
+	font-size: $body-small--font-size;
+	font-family: $body--font-family;
+	font-weight: $font-weight--semibold;
+	line-height: $line-height--medium;
 	padding: 15px 30px;
 	text-align: center;
 	text-decoration: none;
